Mahout Change Log

Release 0.10.0 - unreleased

  MAHOUT-1612: NullPointerException happens during JSON output format for clusterdumper (smarthi, Manoj Awasthi)

  MAHOUT-1652: Java 7 update (smarthi)

  MAHOUT-1639: Streaming kmeans doesn't properly validate estimatedNumMapClusters -km (smarthi)

  MAHOUT-1493: Port Naive Bayes to Scala DSL (apalumbo)

  MAHOUT-1611: Preconditions.checkArgument in org.apache.mahout.utils.ConcatenateVectorsJob (Haishou Ma via smarthi)

  MAHOUT-1615: SparkEngine drmFromHDFS returning the same Key for all Key,Vec Pairs for Text-Keyed SequenceFiles (Anand Avati, dlyubimov, apalumbo)

  MAHOUT-1610: Update tests to pass in Java 8 (srowen)

  MAHOUT-1608: Add option in WikipediaToSequenceFile to remove category labels from documents (apalumbo)

  MAHOUT-1604: Spark version of rowsimilarity driver and associated additions to SimilarityAnalysis.scala (pferrel)

  MAHOUT-1500: H2O Integration (Anand Avati via apalumbo)

  MAHOUT-1606 - Add rowSums, rowMeans and diagonal extraction operations to distributed matrices (dlyubimov)

  MAHOUT-1603: Tweaks for Spark 1.0.x (dlyubimov & pferrel)

  MAHOUT-1596: implement rbind() operator (Anand Avati and dlyubimov)

  MAHOUT-1597: A + 1.0 (element-wise scala operation) gives wrong result if rdd is missing rows, Spark side (dlyubimov)

  MAHOUT-1595: MatrixVectorView - implement a proper iterateNonZero() (Anand Avati via dlyubimov)

  MAHOUT-1590 Mahout unit test failures due to guava version conflict on hadoop 2 (Venkat Ranganathan via sslavic)

  MAHOUT-1529(e): Move dense/sparse matrix test in mapBlock into spark (Anand Avati via dlyubimov)

  MAHOUT-1583: cbind() operator for Scala DRMs (dlyubimov)

  MAHOUT-1563: Eliminated warnings about multiple scala versions (sslavic)

  MAHOUT-1541, MAHOUT-1568, MAHOUT-1569: Created text-delimited file I/O traits and classes on spark, a MahoutDriver for a CLI and a ItemSimilairtyDriver using the CLI
